add feat struct

--- a/frontend/detail.html
+++ b/frontend/detail.html
@@ -94,7 +94,9 @@
 <!--Related Products Section-->
 <h2 id="feat">Related Products</h2>
 <div class="related__products--banner">
-    <div class="featured"></div>
+    <div class="featured">
+
+    </div>
 </div>
 
 <!--End of Related Products Section-->
@@ -116,6 +118,5 @@
 
 <script src="./scripts/app.js"></script>
 <script src="./scripts/products.js"></script>
-<script src="./scripts/featured.js"></script>
 </body>
 </html>
