--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -90,7 +90,9 @@
 <!--Featured Products Section-->
 <h2 class="main__content--featured">Featured Products</h2>
 
-<div class="featured"></div>
+<div class="featured">
+
+</div>
 
 <!--End of Featured Products Section-->
 
@@ -112,6 +114,5 @@
 
     <script src="./scripts/app.js"></script>
     <script src="./scripts/products.js"></script>
-    <script src="./scripts/featured.js"></script>
 </body>
 </html>
