--- a/frontend/index.html
+++ b/frontend/index.html
@@ -102,7 +102,9 @@
 <!--Featured Products Section-->
 <h2 class="main__content--featured">Featured Products</h2>
 
-<div class="featured"></div>
+<div class="featured">
+
+</div>
 
 <!--End of Featured Products Section-->
 
@@ -124,6 +126,5 @@
 
     <script src="./scripts/app.js"></script>
     <script src="./scripts/products.js"></script>
-    <script src="./scripts/featured.js"></script>
 </body>
 </html>
