fixed env password

--- a/frontend/detail.html
+++ b/frontend/detail.html
@@ -93,12 +93,9 @@
 
 <!--Related Products Section-->
 <h2 id="feat">Related Products</h2>
-<div class="related__products--banner">
-    <div class="featured">
+<div class="featured__container">
 
-    </div>
 </div>
-
 <!--End of Related Products Section-->
 
 
