--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -90,7 +90,7 @@
 <!--Featured Products Section-->
 <h2 class="main__content--featured">Featured Products</h2>
 
-<div class="featured">
+<div class="featured__container">
 
 </div>
 
