--- a/frontend/index.html
+++ b/frontend/index.html
@@ -100,9 +100,9 @@
 
 
 <!--Featured Products Section-->
-<h2 class="main__content--featured">Featured Check Products</h2>
+<h2 class="main__content--featured">Featured Products</h2>
 
-<div class="featured">
+<div class="featured__container">
 
 </div>
 
