update feature scripts

--- a/frontend/detail.html
+++ b/frontend/detail.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
 <link rel="stylesheet" type="text/css" href="./css/styles.css">
-<link rel="stylesheet" type="text/css" href="./css/prod.css">
+<!--<link rel="stylesheet" type="text/css" href="./css/prod.css">-->
 <link rel="stylesheet" type="text/css" href="./css/grid.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,7 +43,7 @@
 <!--End Nav Section-->
 
 
-<!--Featured Product-->
+<!--Inventory-->
 
     <div class="featured__product__container">
 
@@ -88,15 +88,16 @@
         </div>
     </div>
 
-<!--End Featured Product-->
+<!--End Inventory-->
 
 
-<!--Related Products Section-->
-<h2 id="feat">Related Products</h2>
+<!--Featured Products Section-->
+<h2 class="main__content--featured">Featured Products</h2>
+
 <div class="featured__container">
 
 </div>
-<!--End of Related Products Section-->
+<!--End of Featured Products Section-->
 
 
 
