--- a/frontend/search.html
+++ b/frontend/search.html
@@ -53,14 +53,19 @@
         </button>
         </div>
     </div>
+
+    <div class="inventory__container">
+
+    </div>
 <!--End of Search Section-->
 
 
 <!--Featured Products Section-->
 <h2 class="main__content--featured">Featured Products</h2>
 
-<div class="inventory"></div>
+<div class="featured__container">
 
+</div>
 <!--End of Featured Products Section-->
 
 
