fixed mobile prod page

--- a/frontend/products.html
+++ b/frontend/products.html
@@ -47,16 +47,11 @@
             
     <h3>Filter by Category</h3>
         <form>
-            <input type="radio" id="all" name="hardware_filter" value="ALL" checked>
-                <label for="all">All Products</label>
-            <input type="radio" id="case" name="hardware_filter" value="CASE">
-            <label for="case">Case</label>
-            <input type="radio" id="components" name="hardware_filter" value="COMPONENTS">
-            <label for="components">Components</label>
-            <input type="radio" id="power" name="hardware_filter" value="POWER">
-            <label for="power">Power</label>
-            <input type="radio" id="accessories" name="hardware_filter" value="ACCESSORIES">
-                <label for="accessories">Accessories</label>
+            <input type="radio" id="all" name="hardware_filter" value="ALL" checked><label for="all">All Products</label>
+            <input type="radio" id="case" name="hardware_filter" value="CASE"><label for="case">Case</label>
+            <input type="radio" id="components" name="hardware_filter" value="COMPONENTS"><label for="components">Components</label>
+            <input type="radio" id="power" name="hardware_filter" value="POWER"><label for="power">Power</label>
+            <input type="radio" id="accessories" name="hardware_filter" value="ACCESSORIES"><label for="accessories">Accessories</label>
         </form>
 </div>
 
