--- a/frontend/search.html
+++ b/frontend/search.html
@@ -8,6 +8,7 @@
 <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
 <link rel="stylesheet" type="text/css" href="./css/styles.css">
 <link rel="stylesheet" type="text/css" href="./css/search.css">
+<link rel="stylesheet" type="text/css" href="./css/prod.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,400;0,700;0,900;1,100&display=swap" rel="stylesheet">
@@ -54,6 +55,8 @@
         </div>
     </div>
 
+    
+
     <div class="inventory__container">
 
     </div>
@@ -85,6 +88,7 @@
 
     <script src="./scripts/app.js"></script>
     <script src="./scripts/products.js"></script>
+    <script src="./scripts/search.js"></script>
 
 </body>
 </html>
