fix toggle button mobile css

--- a/frontend/detail.html
+++ b/frontend/detail.html
@@ -67,17 +67,21 @@
                     <p class="featured__product--content--price">$249</p>
 
                     <p class="featured__product--content--quantity">
-                        <button type="button">
-                            <i class="fa fa-shopping-cart"></i>Add to cart
-                        </button>
-                    Quantity: <input type="text" value="1">
+                            <select>
+                                <option default selected>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                            </select>
+                            <button type="button">
+                                <i class="fa fa-shopping-cart"></i>Add to cart
+                            </button>
                     </p>
                     <p class="featured__product--content--desc">This H510 is fit for a Viking down to the last detail. 
                     The motherboard tray appears in Valhalla thematic colors. The limited edition puck has been crafted 
                     in the design of Eivor's crested shield, with a removable arrow.</p>
 
                     <ul class="featured__product--info">
-                        <li>Iconic cable management bar and uninterrupted tempered-glass side panel</li>
+                        <li>Iconic cable management bar and tempered-glass side panel</li>
                         <li>USB 3.1 Gen2-compatible USB-C connector on the front panel</li>
                         <li>Cable routing kit with pre-installed channels and straps</li>
                         <li>Two Aer F120mm fans and removable filter on PSU intake</li>
