add sort to search page

--- a/frontend/search.html
+++ b/frontend/search.html
@@ -45,32 +45,28 @@
 
 <!--Search Section-->
 
-    <div class="search__container">
-        <h2>Search Page</h2>
-        <div class="search__container--bar">
-        <input type="text" class="search__container--term" placeholder="Looking for something?">
-        <button type="submit" class="search__container--button">
-            <i class="fa fa-search"></i>
-        </button>
-        </div>
+<div class="search__container">
+    <h2>Search Page</h2>
+    <div class="search__container--bar">
+      <form action="" onsubmit="return false">
+        <input type="text" id="search" class="search__container--term" onkeyup="searchFunc()" placeholder="What are you looking for?"> 
+      </form>
     </div>
+  </div>
+
+<!-- <input id="searchField" class="search__container--bar" type="text" placeholder="What are you looking for?">
+                <button type="submit" class="search__container--button">
+                    <i class="fa fa-search"></i>
+                </button> -->
+
+
 
     
-
     <div class="inventory__container">
 
     </div>
+
 <!--End of Search Section-->
-
-
-<!--Featured Products Section-->
-<h2 class="main__content--featured">Featured Products</h2>
-
-<div class="featured__container">
-
-</div>
-<!--End of Featured Products Section-->
-
 
 <!--Footer Section-->
 
