--- a/frontend/search.html
+++ b/frontend/search.html
@@ -45,23 +45,17 @@
 
 <!--Search Section-->
 
-<div class="search__container">
-    <h2>Search Page</h2>
-    <div class="search__container--bar">
-      <form action="" onsubmit="return false">
-        <input type="text" id="search" class="search__container--term" onkeyup="searchFunc()" placeholder="What are you looking for?"> 
-      </form>
+    <div class="search__container">
+        <h2>Search Page</h2>
+            <div class="search__container--bar">
+                <form action="" onsubmit="return false">
+                    <input type="text" id="search" class="search__container--term" onkeyup="searchFunc()" placeholder="Start your search here."> 
+                </form>
+            </div>
+
     </div>
-  </div>
-
-<!-- <input id="searchField" class="search__container--bar" type="text" placeholder="What are you looking for?">
-                <button type="submit" class="search__container--button">
-                    <i class="fa fa-search"></i>
-                </button> -->
 
 
-
-    
     <div class="inventory__container">
 
     </div>
@@ -84,7 +78,6 @@
 
     <script src="./scripts/app.js"></script>
     <script src="./scripts/products.js"></script>
-    <script src="./scripts/search.js"></script>
 
 </body>
 </html>
