--- a/frontend/search.html
+++ b/frontend/search.html
@@ -50,14 +50,13 @@
             <div class="search__container--bar">
                 <form action="" onsubmit="return false">
                     <input type="text" id="search" class="search__container--term" onkeyup="searchFunc()" placeholder="Start your search here."> 
-                    <select class="priceSort" onchange="sortPrice()">
+                    <select class="search__container--sort" onchange="sortPrice()">
                         <option value = "default" default selected>Sort By Price</option>
                         <option value = "Highest">Highest to Lowest</option>
                         <option value = "Lowest">Lowest to Highest</option>
                       </select>
                 </form>
             </div>
-
     </div>
 
 
