updating autocomplete on search

--- a/frontend/search.html
+++ b/frontend/search.html
@@ -48,7 +48,7 @@
     <div class="search__container">
         <h2>Search Page</h2>
             <div class="search__container--bar">
-                <form action="" onsubmit="return false">
+                <form action="" onsubmit="return false" autocomplete="off">
                     <input type="text" id="search" class="search__container--term" onkeyup="searchFunc()" placeholder="Start your search here."> 
                     <select class="search__container--sort" onchange="sortPrice()">
                         <option value = "default" default selected>Sort By Price</option>
