added notes in main.go file for clarification

--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -49,13 +49,13 @@
             <form id="form" action="/action_page.php" method="get" autocomplete="off">
 
                     <label for="name">Username</label>
-                    <input type="text" id="username" name="name" placeholder="Enter your name (required)">
+                    <input type="text" id="username" name="name" placeholder="Enter your name (required)" autocomplete="off">
 
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" placeholder="Enter a valid email (required)">
+                    <input type="email" id="email" name="email" placeholder="Enter a valid email (required)" autocomplete="off">
 
                     <label for="phone">Phone Number: ###-###-####</label>
-                    <input type="tel" id="phone" name="phone" placeholder="Enter a valid phone number" pattern="^[1-9]\d{2}-\d{3}-\d{4}">
+                    <input type="tel" id="phone" name="phone" placeholder="Enter a valid phone number" pattern="^[1-9]\d{2}-\d{3}-\d{4}" autocomplete="off">
 
                     <fieldset>
                     <legend>What is your preferred contact method?</legend>
