error handling of promise

--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -46,7 +46,7 @@
 
 
         <div class="contact__container">
-            <form id="form" action="/action_page.php" method="get" autocomplete="off">
+            <form id="form" action="/action_page.php" method="get" autocomplete="off" onsubmit="submitForm(event)">
 
                     <label for="name">Username</label>
                     <input type="text" id="username" name="name" placeholder="Enter your name (required)" autocomplete="off">
